added dark confguratino

--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -71,6 +71,10 @@ sequence:
 ## Branding
 branding: AcreetionOS
 
+style:
+   palette:
+      dark: true
+
 ## Whether calamares should show "Are you sure?" prompt right before each execution phase.
 prompt-install: true
 
